# scripts

./: .gitignore  README.md  insert_sql.sql  pyproject.toml  upload_dataset_to_gcp.py
